<resources>
    <string name="app_name">NoteMax</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="main">Main</string>
    <string name="back">Back</string>
    <string name="help">help</string>
    <string name="search">search</string>
    <string name="settings_will_here">SETTINGS will here</string>
    <string name="help_will_here">HELP will here</string>
    <string name="favorite_will_here">FAVORITE will here</string>
    <string name="categories">Categories</string>
    <string name="about">About</string>
</resources>