<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:title="@string/help" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="40"
        app:showAsAction="never"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/btn_star_big_on"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"
        android:title="@string/favorite" />
    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="20"
        app:showAsAction="always"
        android:title="@string/main" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        app:showAsAction="always"
        android:title="@string/search" />
</menu>